# GraspGen_ros2

./: README.md
GraspGen/: .gitignore
GraspGen/docker/: Dockerfile  compose.yml  graspgen_cuda121.dockerfile  graspgen_cuda128.dockerfile  ros_entrypoint.sh
GraspGen/grasp_gen.egg-info/: PKG-INFO  requires.txt
GraspGen/models/sample_data/real_object_pc/: 1740787710_319213.json  1740787815_545011.json  1740787897_012511.json  1740788032_190651.json  1741385877_42353.json  1741544869_79815.json  1741544976_63682.json  1741544996_713226.json  1741545081_439523.json  1741545110_588433.json  1741545266_901072.json  1741545340_64922.json  1741545441_924315.json
graspgen_wrapper/: package.xml  setup.cfg  setup.py
graspgen_wrapper/graspgen_wrapper/: graspgen_service_node.py
graspgen_wrapper/launch/: graspgen_service.launch.py
graspgen_wrapper/resource/: graspgen_wrapper
graspgen_wrapper/srv/: PlanGrasp.srv
